--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,70 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    line-height: 1.5;
+}
+
 body {
     font-family: Arial, Helvetica, sans-serif;
+}
+
+img {
+    width: 600px;
+}
+
+ul {
+    list-style: none;
+    padding: 20px;
+}
+
+ol {
+    padding: 20px;
+}
+
+p {
+    margin-bottom: 20px;
+}
+
+ul li h2 {
+    font-size: 16px;
+}
+
+.menu-card {
+    width: 500px;
+    text-align: center;
+    margin: 20px auto;
+    padding: 50px;
+    box-shadow: 1px 1px 4px rgba(0, 0, 0, .5);
+}
+
+.menu-card-context {
+    text-align: left;
+    padding: 20px;
+}
+
+.recipe-card {
+    width: 700px;
+    text-align: center;
+    margin: 20px auto;
+    /* Center the recipe card horizontally */
+    padding: 50px;
+    box-shadow: 1px 1px 4px rgba(0, 0, 0, .5);
+}
+
+.recipe-content {
+    text-align: justify;
+    text-justify: inter-word;
+    padding: 20px;
+}
+
+.recipe-card a {
+    text-decoration: none;
+
+}
+
+.go-back {
+    background-color: #151515;
+    color: white;
+    padding: 5px;
 }
