--- a/css/styles.css
+++ b/css/styles.css
@@ -7,10 +7,35 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
+    background-color: #f2f2f2;
+    padding: 20px;
+}
+
+.title {
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 20px;
+    font-size: 36px;
+    color: #00B29C;
 }
 
 img {
-    width: 600px;
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+    margin-bottom: 20px;
+}
+
+ul,
+ol {
+    padding: 0;
+    margin-bottom: 20px;
+}
+
+ul li,
+ol li {
+    margin-bottom: 5px;
 }
 
 ul {
@@ -30,24 +55,11 @@ ul li h2 {
     font-size: 16px;
 }
 
-.menu-card {
-    width: 500px;
-    text-align: center;
-    margin: 20px auto;
-    padding: 50px;
-    box-shadow: 1px 1px 4px rgba(0, 0, 0, .5);
-}
-
-.menu-card-context {
-    text-align: left;
-    padding: 20px;
-}
 
 .recipe-card {
     width: 700px;
     text-align: center;
     margin: 20px auto;
-    /* Center the recipe card horizontally */
     padding: 50px;
     box-shadow: 1px 1px 4px rgba(0, 0, 0, .5);
 }
@@ -64,7 +76,8 @@ ul li h2 {
 }
 
 .go-back {
-    background-color: #151515;
+    background-color: #00B29C;
     color: white;
-    padding: 5px;
+    padding: 8px;
+    border-radius: 4px;
 }
