--- a/css/index.css
+++ b/css/index.css
@@ -27,6 +27,7 @@ body {
     margin: auto;
     padding: 20px;
     max-width: 600px;
+    min-width: 400px;
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
